# vigloo-jira

./: CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/: .gitignore
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-26-vigloo-jira-tui.md  2026-04-10-cli-spinner.md
docs/superpowers/specs/: 2026-03-26-vigloo-jira-tui-design.md  2026-04-10-cli-spinner-design.md
src/: acli.rs  app.rs  cache.rs  cli.rs  config.rs  event.rs  main.rs  model.rs  ui.rs
