[package]
name = "vigloo-jira"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "vj"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
chrono = "0.4"
open = "5"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
